change test page

--- a/_posts/2016-03-07-angular.md
+++ b/_posts/2016-03-07-angular.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 category : angular
-tagline: "bring your app to life"
-tags : [tutorial, angular, javascript, animation]
+tagline: "angular test"
+tags : [tutorial, angular, javascript]
 ---
 {% include JB/setup %}
 
