adding header to post

--- a/_posts/2016-03-27-webpack.md
+++ b/_posts/2016-03-27-webpack.md
@@ -1,4 +1,11 @@
-# webpack part 1
+---
+layout: post
+category : webpack
+tagline: "a bundler for javascript and friends"
+tags : [tutorial, webpack, javascript]
+---
+{% include JB/setup %}
+# webpack part I
 
 ## other solutions
 
