fixing link to repo

--- a/_posts/2016-03-27-webpack.md
+++ b/_posts/2016-03-27-webpack.md
@@ -412,4 +412,4 @@ Hope you had a good read. Stay tuned for part 2.
 
 If you want to try out everything we did in the post have a look at this repo
 
-[webpack-starting out](https://github.com/softchris)
+[webpack-starting out](https://github.com/softchris/webpack-starting-out)
