--- a/_posts/2017-07-22-webpack.md
+++ b/_posts/2017-07-22-webpack.md
@@ -23,12 +23,14 @@ A task runner usually has the job of concatenating a bunch of files to one or a 
 
 gulp,grunt
 
-	file.es6 => file.js
-	file.es6 => file.js
-	file.es6 => file.js file.js  browser
-	file.es6 => file.js file.js
-	file.es6 => file.js
-	file.es6 => file.js
+```
+file.es6 => file.js
+file.es6 => file.js
+file.es6 => file.js file.js  browser
+file.es6 => file.js file.js
+file.es6 => file.js
+file.es6 => file.js
+```
 
 ## webpack
 
@@ -41,28 +43,32 @@ First thing you need to know with webpack is that it draws all its packages from
 ### Install
 You can install webpack both globally and locally depending on your needs.
 
-	npm install webpack -g
+```
+npm install webpack -g
+```
 
 ### CLI, Command line Usage
 Assume we have
 
-	index.html
-	app.js
-
+```
+index.html
+app.js
+```
 
 On entry point run 
 
-	webpack ./app.js bundle.js
+```
+webpack ./app.js bundle.js
+```
 
-Then ensure your index.html looks like this:
+Then ensure out index.html points out our bundle in script tag like this:
 
-	<html>
-    	<head></head>
-	    <body>
-	        Your application
-	        <script src="bundle.js"></script>
-	    </body>
-	</html>	 
+**index.html**
+
+```
+<script src="bundle.js"></script>
+```
+
 
 Pointing to our newly created bundle.js
 
@@ -72,12 +78,16 @@ Add a webpack.config.js
 
 Lets do the same thing as we did on the command line. 
 
-	module.exports = {
-		entry : "./app.js",
-        output : {
-          filename : "bundle.js"
-        }
+**webpack.config.js**
+
+```
+module.exports = {
+	entry : "./app.js",
+	output : {
+		filename : "bundle.js"
 	}
+}
+```
 
 Running
 
@@ -133,21 +143,25 @@ You can run it with a--simple flag, and access your app like so
 
 Change config file to this
 
-	var webpack = require("webpack");
+**webpack.config.js**
 
-	module.exports = {
-	    entry : "./app.js",
-	    output : {
-	        path: path.resolve('build/js'),
-	        publicPath: "/public/js/",
-	        filename : "bundle.js",
-	        
-	    },
-	    watch: true,
-	    plugins: [
-	        new webpack.HotModuleReplacementPlugin()
-	    ]
-	}
+```
+var webpack = require("webpack");
+
+module.exports = {
+	entry : "./app.js",
+	output : {
+		path: path.resolve('build/js'),
+		publicPath: "/public/js/",
+		filename : "bundle.js",
+		
+	},
+	watch: true,
+	plugins: [
+		new webpack.HotModuleReplacementPlugin()
+	]
+}
+```
 
 Adding this:
 
@@ -358,7 +372,9 @@ Its more of a nice thing that we say which files are es6 and which are not.
 
 When we have 2 exports or more we can use 
 
-	{ Test, Test2 }
+```
+export { Test, Test2 }
+```
 
 When we have only one export like so:
 	
